# grok-build

./: ARCHITECTURE.md  Cargo.toml  README.md
.github/workflows/: release-desktop.yml
crates/codegen/bony-build/: Cargo.toml  README.md
crates/codegen/bony-build/src/: agent_bridge.rs  app.rs  charts.rs  config_io.rs  events.rs  fonts.rs  git_workspace.rs  main.rs  markdown.rs  model.rs  task.rs  unity.rs  usage.rs
crates/codegen/bony-monitor/: Cargo.toml  README.md
crates/codegen/bony-monitor/catalog/: discovered.json  features.toml
crates/codegen/bony-monitor/src/: architecture.rs  catalog.rs  features.rs  git.rs  impact.rs  main.rs  matrix.rs  workflow.rs
crates/codegen/bony-monitor/static/: app.js  index.html  style.css
crates/codegen/xai-grok-desktop/: Cargo.toml  README.md
crates/codegen/xai-grok-desktop/src/: agent_bridge.rs  app.rs  main.rs  model.rs
scripts/: run-desktop.ps1  run-dev.ps1  run-monitor.ps1  sync-monitor-catalog.ps1
