[package]
name = "bony-build"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Bony Build native desktop client (egui + ACP stdio)"
publish = false

[[bin]]
name = "bony-build"
path = "src/main.rs"

[dependencies]
agent-client-protocol = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
eframe = { version = "0.31", default-features = true }
egui = "0.31"
egui_plot = "0.31"
futures = { workspace = true }
rfd = "0.15"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["compat"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
xai-acp-lib = { workspace = true }

[lints]
workspace = true
