[package]
name = "bony-monitor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Bony Build web monitor — architecture & change impact dashboard"
publish = false

[[bin]]
name = "bony-monitor"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true, features = ["fs", "cors", "set-header"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
